--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -31,6 +31,12 @@ jobs:
             ${{ runner.os }}-poetry-
       - name: Install Poetry
         run: pip install poetry
+      - name: Check pyproject.toml presence
+        run: |
+          if [ ! -f pyproject.toml ]; then
+            echo "pyproject.toml not found!"
+            exit 1
+          fi
       - name: Install dependencies
         run: poetry install --no-interaction
       - name: Cache Hugging Face models
@@ -71,6 +77,12 @@ jobs:
             ${{ runner.os }}-poetry-
       - name: Install Poetry
         run: pip install poetry
+      - name: Check pyproject.toml presence
+        run: |
+          if [ ! -f pyproject.toml ]; then
+            echo "pyproject.toml not found!"
+            exit 1
+          fi
       - name: Install dependencies
         run: poetry install --no-interaction
       - name: Cache Hugging Face models
