--- a/aurora-core/pyproject.toml
+++ b/aurora-core/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
 ]
 
 
-[tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
 pytest = ">=8.2.0,<9.0.0"
 pytest-asyncio = ">=0.23.6,<0.24.0"
 black = ">=24.4.2,<25.0.0"
